# DF-Metadata-Customizer

./: .gitignore  CHANGES_APPLIED.md  CLI_FILTERING_GUIDE.md  CONTRIBUTING.md  DF_Metadata_Customizer.py  LICENSE.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  RELEASE_AUDIT.md  RELEASE_READY.md  pyproject.toml  remuxer.py  requirements.txt
.github/workflows/: analytics.yml  build.yml
analytics/: ANALYTICS.md  fetch_analytics.py
df_metadata_customizer/: __init__.py  __main__.py  database_reformatter.py  dialogs.py  file_manager.py  image_utils.py  mp3_utils.py  rule_manager.py  settings_manager.py  song_metadata.py  song_utils.py
df_metadata_customizer/api/: __init__.py  models.py  routes_files.py  routes_presets.py  server.py
df_metadata_customizer/cli/: __init__.py  commands.py
df_metadata_customizer/components/: __init__.py  app_menu.py  json_editor.py  preset.py  tree.py
df_metadata_customizer/core/: __init__.py  audio_hash.py  error_logger.py  file_manager.py  metadata.py  preset_service.py  remuxer.py  rule_manager.py  settings_manager.py  song_utils.py
df_metadata_customizer/dialogs/: __init__.py  app_dialog.py  confirm.py  duplication_check.py  export.py  preferences.py  progress.py  statistics.py
df_metadata_customizer/shared/: __init__.py  models.py
df_metadata_customizer/ui/: __init__.py  cover_manager.py  custom_dialogs.py  main_window.py  menu_bar.py  platform_utils.py  preset_manager.py  (+14 more)
presets/: Default.json  TuruuMGL.json  Zhe_Vlach_Varon ASCII data.json  Zhe_Vlach_Varon OG Language.json  mm2wood.json  nothing.json
(+16 files in other folders)
